--- a/p5.html
+++ b/p5.html
@@ -1,1 +1,44 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="p5.css">
+    <title>Project 5</title>
+</head>
+<body>
+    <div class="homeHeader" id="homeHeader">Maximo Stowers-DeWolfe</div>
+    <div class="links">
+        <a href="https://maximosd.github.io/index.html">Home</a>
+        <a href="https://maximosd.github.io/Projects/projects.html">Projects</a>
+        <a href="https://maximosd.github.io/About/about.html">About</a>
+        <a href="https://maximosd.github.io/Resume/resume.html">Resume</a>
+    </div>
+    <hr class="divider">
+    <div class="content">
+        <h1>Project 5: Game Creation</h1>
+        <h3 class="gitHubLink"><a href="https://github.com/maximosd/cit281-project5" target="_blank">Check out the P5 GitHub Repository!</a></h3>
+    </div>
+    <img class="projectImage" src="images/p4A.jpg" alt="Project 4A Image">
+    <h4 class="contentHeaders">The Project</a></h4>
+    <p class="projectDescription">
+        Project 4 focused on server communication using Postman. We built off of our previous project
+        where we learned how to export and import functions. This time, we focused on making requests
+        to our server using Postman. We also learned how to handle different types of requests, such as
+        GET, POST, PUT, and DELETE. We learned how to handle unknown routes and how to return appropriate
+        responses. Throughout this project, we implemented testing functions to ensure that we were on track
+        for a successful project.
+    </p>
+    <img class="projectImage" src="images/p4B.jpg" alt="Project 4B Image">
+    <img class="projectImage" src="images/p4C.jpg" alt="Project 4C Image">
+    <h4 class="contentHeaders">Lab 5</h4>
+    <img src="images/lab-05A.jpg" alt="Lab 5A Node.js" class="labImage">
+    <img src="images/lab-05B.jpg" alt="Lab 5B Node.js" class="labImage">
+    <p class="labDescriptions">
+        In Lab 5, we set up Postman on our computers. We also learned how to navigate the interface to
+        switch between different requests. We practiced making GET and POST requests to our server.
+        We dealt with a database of students and depending on the route, we returned unique information
+        for that specific student.
+    </p>
+</body>
+</html>
