Added content to p5 page, updated styling

--- a/p5.html
+++ b/p5.html
@@ -19,26 +19,30 @@
         <h1>Project 5: Game Creation</h1>
         <h3 class="gitHubLink"><a href="https://github.com/maximosd/cit281-project5" target="_blank">Check out the P5 GitHub Repository!</a></h3>
     </div>
-    <img class="projectImage" src="images/p4A.jpg" alt="Project 4A Image">
+    <img class="projectImage" src="images/p5.jpg" alt="Project 5 Image">
     <h4 class="contentHeaders">The Project</a></h4>
     <p class="projectDescription">
-        Project 4 focused on server communication using Postman. We built off of our previous project
-        where we learned how to export and import functions. This time, we focused on making requests
-        to our server using Postman. We also learned how to handle different types of requests, such as
-        GET, POST, PUT, and DELETE. We learned how to handle unknown routes and how to return appropriate
-        responses. Throughout this project, we implemented testing functions to ensure that we were on track
-        for a successful project.
+        Project 5 allowed us to be creative and create a program of our choice. We were encouraged to use AI
+        to build the client (HTML and CSS files). I decicded to creat a game called "LootBox Roulette".
+        In this game, each player starts with 100 coins. They are then able to buy an item from a lootbox. 
+        The items come in common, rare, and legendary. The player clicks the button called ‘Open Box’. 
+        This will give them one item from either a common, rare, or legendary box. This is then displayed on 
+        the screen. Once the player reaches less than 10 coins, they will no longer be able to purchase any 
+        more boxes. The player inputs their name using the /:name part of the route. This tracks each player’s 
+        inventory for each server session. Once the server is ended and restarted, each player’s inventory is 
+        wiped. You could theoretically make as many players as your memory allowed per session. Copilot helped 
+        me walk through linking up files together, and where it made sense to put different code blocks. ChatGPT 
+        came up with the idea for the game and built the html file and CSS files. It also helped with the 
+        conceptual aspect of game play.
+
     </p>
-    <img class="projectImage" src="images/p4B.jpg" alt="Project 4B Image">
-    <img class="projectImage" src="images/p4C.jpg" alt="Project 4C Image">
-    <h4 class="contentHeaders">Lab 5</h4>
-    <img src="images/lab-05A.jpg" alt="Lab 5A Node.js" class="labImage">
-    <img src="images/lab-05B.jpg" alt="Lab 5B Node.js" class="labImage">
+    <h4 class="contentHeaders">Lab 6</h4>
+    <img class="projectImage" src="images/lab-06A.jpg" alt="Project Lab 6 Image">
+    <img class="projectImage" src="images/lab-06B.jpg" alt="Project Lab 6 Image">
     <p class="labDescriptions">
-        In Lab 5, we set up Postman on our computers. We also learned how to navigate the interface to
-        switch between different requests. We practiced making GET and POST requests to our server.
-        We dealt with a database of students and depending on the route, we returned unique information
-        for that specific student.
+        In Lab 6, we practiced getting more familiar with GitHub. We completed the Introduction to GitHub course on 
+        GitHub Learning Lab. We then moved over to VS Code and completed a task involving creating a classfor a libary inventory. 
+        We practiced adding new classes by running our functions.
     </p>
 </body>
 </html>
